Refactor auth system

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -8,7 +8,6 @@
 
 {% include 'streamer/navbar.html' %}
 
-
 <style type="text/css">
 	.login-container {
 		display: flex;
@@ -47,7 +46,7 @@
 		display: block;
 	}
 
-	.login-form input[type="password"],[type="text"] {
+	.login-form input[type="password"],[type="email"] {
 		width: 100%;
 	    height: 32px;
 	    font-size: 15px;
@@ -87,16 +86,56 @@
 		padding: 0px;
 		margin: 0px;
 		color: red;
-		background-color: #fff;
-		border: 1px #3334 solid;
 	}
 
 	.errorlist li {
 
 	}
 
+	.message-container {
+		grid-column-start: 1;
+	    grid-column-end: 4;
+	    display: flex;
+	    background-color: #3b557e;
+	    color: #fff;
+	    background-image: linear-gradient(to bottom,#6482ad 0,#3b557e 45px);
+	    border-radius: 3px;
+	    box-shadow: 0 1px 2px rgba(0,0,0,.5), inset 0 0 1px rgba(0,0,0,.2);
+	}
+
+	.message-container > button {
+		background: transparent;
+	    border: none;
+	    color: #fff;
+	    padding: 10px;
+	    cursor: pointer;
+	}
+
+	.message {
+		text-align: center;
+	    width: 100%;
+	    padding: 10px;
+	    font-size: 13px;
+	    font-weight: bold;
+	    text-shadow: 0 -1px 1px rgba(0,0,0,.45);
+	}
+
+	.d-none {
+		display: none;
+	}
+
+
+
 </style>
 
+{% if message %}
+	<div id="message" class="message-container">
+		<div class="message">{{ message }}</div>
+		<button type="button" onclick="$('#message').addClass('d-none')">
+			<i class="fas fa-times"></i>
+		</button>
+	</div>
+{% endif %}
 
   <div class="login-container">
 	  <div class="login-header">
@@ -117,11 +156,10 @@
 			{% csrf_token %}
 			{{ form.non_field_errors }}
 			<p>
-				<label>TRACLE username</label>
-				{{ form.username }}
+				{{ form.errors.email }}
+				{{ form.email }}
 			</p>
 			<p>
-				<label>Password</label>
 				{{ form.password }}
 			</p>
 			<button type="submit">Sign in</button>
