--- a/streamer/templates/streamer/index.html
+++ b/streamer/templates/streamer/index.html
@@ -196,7 +196,7 @@
 									</div>
 									<div class="feed-item-channel">
 										<i class="fas fa-user"></i>
-										<a href="channel/{{ video.channel.channel_id }}">
+										<a href="channel/{{ video.channel.channel }}">
 											{{ video.channel.name }} uploaded
 										</a>
 									</div>
