--- a/streamer/templates/streamer/navbar.html
+++ b/streamer/templates/streamer/navbar.html
@@ -95,7 +95,7 @@
     <ul class="navbar-nav">
         {% if request.user.is_authenticated %}
           <li>
-            <a href="/logout">Logout {{ request.user.username }}</a>
+            <a href="/logout">Logout {{ request.session.channel_name }}</a>
           </li>
         {% else %}
           <li>
