--- a/streamer/templates/streamer/edit_video.html
+++ b/streamer/templates/streamer/edit_video.html
@@ -77,18 +77,7 @@
 <div class="video-details-container">
 	<h1>Video details</h1>
 	<form enctype="multipart/form-data" method="POST" action="">
-		{% if video.processed %}
-			<div class="button-container"><input type="submit" value="Save"/></div>
-		{% else %}
-			<div style="
-			padding: 5px 5px;
-		    background: #fff;
-		    margin-bottom: 10px;
-		    font-size: 1.2em;
-		    font-weight: 600;">
-				This video is still beeing processed. You can edit the properties after processing has finished.
-			</div>
-		{% endif %}
+		<div class="button-container"><input type="submit" value="Save"/></div>
 		<div class="form-container">
 			<div class="left-column">
 				{% csrf_token %}
@@ -122,7 +111,7 @@
     border: 1px #3335 solid;
     margin-bottom: 5px;">
 					<div>
-						{% if video.processed %}
+						{% if video.file.processed %}
 							Video link:
 						{% else %}
 							Video will be available at:
@@ -136,7 +125,7 @@
     background-color: #fff9;
     border: 1px #3335 solid;">
 					<div>
-						{% if video.processed %}
+						{% if video.file.processed %}
 							Video has been processed
 						{% else %}
 							Video is beeing processed
