--- a/streamer/templates/streamer/video.html
+++ b/streamer/templates/streamer/video.html
@@ -501,7 +501,6 @@
 		});
 
 		$('#subscribe').click(function () {
-			console.log("SUBSCRIBE CLICKED!");
 			let csrftoken = $("[name=csrfmiddlewaretoken]").val();
 			let action = "subscribe"
 			if ($(this).hasClass('js-action-unsubscribe')) {
@@ -513,6 +512,7 @@
 				url: '/subscribe/',
 				beforeSend: function (request) {
 					request.setRequestHeader("X-CSRFToken", csrftoken);
+					$(this).attr('disabled', true);
 				},
 				data: {
 					'csfrmiddlewaretoken' : csrftoken,
@@ -521,7 +521,6 @@
 				},
 				dataType: 'json',
 				success: function (data) {
-					console.log(data)
 					$(this).toggleClass('js-action-subscribe');
 					$(this).toggleClass('js-action-unsubscribe');
 					if ($(this).html().trim() === 'Subscribe') {
@@ -529,6 +528,7 @@
 					} else {
 						$(this).html('Subscribe');
 					}
+					$(this).attr('disabled', false);
 				}
 			});
 		});
